feat(ui): 静态页样式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "mySrc/**/*"],
   "exclude": ["node_modules/*"]
 }
