--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
